# rag-cli

./: .env.example  .gitignore  .mcp.json  .mcp.json.backup  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CLAUDE_PLUGIN.md  CLEANUP.bat  CODE_REVIEW_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  ENHANCED_DASHBOARD_README.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FIXES_APPLIED.md  HOOKS_IMPLEMENTATION_COMPLETE.md  HOOK_FILES_REFERENCE.md  HOOK_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_v1.2.0.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  IMPROVEMENTS.md  INSTALL.md  INTEGRATION_COMPLETE.md  KNOWN_ISSUES.md  MAF_IMPLEMENTATION_SUMMARY.md  MAF_INTEGRATION_v1.2.0.md  MAF_v1.3.0_ENHANCEMENTS.md  MANIFEST.in  MCP_SERVER_FIX.md  MIGRATION_HOOK_FIX.md  MULTI_INSTANCE_ARCHITECTURE.md  NO_EMOJI_POLICY.md  OPEN_DASHBOARD.bat  Open-Dashboard.ps1  PHASE_3_COMPLETE.md  PHASE_4_5_IMPLEMENTATION_SUMMARY.md  (+46 more)
.claude/: settings.local.json
.claude-plugin/: hooks.json  lifecycle.json  marketplace.json  plugin.json
.claude-plugin/commands/: update-rag.md
.claude/commands/: rag-project.md  watch-rag.md
.github/workflows/: validate-plugin.yml
config/: default.yaml  rag_settings.json  services_status.json  tavily_usage.json
config/templates/: .env.template
data/: project_indexing_result.json
docs/: ENHANCEMENTS_SUMMARY.md
fix-imports/: state.json
implement/: plan.md  state.json
scripts/: index.py  migrate_faiss_to_chromadb.py  remove_emojis.py  retrieve.py  sync_all.py  sync_plugin.py  validate_no_emojis.py  validate_plugin.py  verify_installation.py  verify_rag_detection.py
scripts/install/: legacy_install_plugin.py
scripts/utils/: index.py  retrieve.py
src/agents/: __init__.py  base_agent.py  query_decomposer.py  result_synthesizer.py
src/cli/: __init__.py  index.py  retrieve.py
src/core/: agent_orchestrator.py  async_utils.py  best_practices_detector.py  claude_code_adapter.py  claude_integration.py  config.py  content_extractors.py  dependency_validator.py  document_processor.py  duplicate_detector.py  embeddings.py  exception_handlers.py  hyde.py  online_retriever.py  output.py  path_resolver.py  prompt_templates.py  query_classifier.py  query_enhancer.py  retrieval_pipeline.py  rich_output.py  semantic_cache.py  singleton_factory.py  token_manager.py  vector_store.py  web_scraper.py
src/integrations/: __init__.py  (+3 more)
tests/: test_constants.py  test_core.py  test_dependency_injection.py  test_document_processor.py  test_foundation.py  test_query_classifier.py
(+121 files in other folders)
